--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-04 21:44:12
+lastsearch = 2024-08-04 23:23:03
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -142.9%%
+title = YouTube
+url = https://www.youtube.com/watch?v=wIGinEAhcXc
 
 [kallos.co]
 match = -105.3%%
@@ -102,9 +102,9 @@ title = Giá vàng mất mốc 67 triệu đồng/lượng
 url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/204300/gia-vang-mat-moc-67-trieu-dongluong?page=73
 
 [nongnghiep.vn]
-match = -121.1%%
-title = Trùng tu Chùa Cầu và chiều sâu văn hóa của người Hội An
-url = https://nongnghiep.vn/trung-tu-chua-cau-va-chieu-sau-van-hoa-cua-nguoi-hoi-an-d394764.html
+match = 21.1%%
+title = Cây hoa mộc đời người
+url = https://nongnghiep.vn/cay-hoa-moc-doi-nguoi-d312963.html
 
 [vietjack.com]
 match = -131.6%%
@@ -132,9 +132,9 @@ title =
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam-nu-tam-xuan-trang-tri-tet-dep-sang-trong-1406607
 
 [shopee.vn]
-match = -89.5%%
-title = cây tài lộc giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=cây tài lộc
+match = -121.1%%
+title = [Chỉ Giao HCM Ship Hỏa Tốc] Bó Hoa Cúc Tana Tươi( 1 Bó)
+url = https://shopee.vn/-Chỉ-Giao-HCM-Ship-Hỏa-Tốc-Bó-Hoa-Cúc-Tana-Tươi(-1-Bó)-Hoa-Tươi-Hoa18-i.52741467.16241410836
 
 [baobinhdinh.vn]
 match = -110.5%%
