--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-04 18:48:30
+lastsearch = 2024-08-04 23:18:18
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -109.5%%
-title = 60 Giây Chiều - Ngày 02/08/2024 - HTV Tin Tức Mới Nhất 2024
-url = https://www.youtube.com/watch?v=tIiV66LvrZg
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=GzepFXdUfeQ
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -37,9 +37,9 @@ title = Tổng hợp quy định nhập cảnh Đài Loan 2024
 url = https://vnpay.vn/quy-dinh-nhap-canh-dai-loan-0pgkjx2c6vit
 
 [taiwandiary.vn]
-match = -100.0%%
-title = Tổng hợp các loại visa tại Đài Loan có thể bạn chưa biết
-url = https://taiwandiary.vn/2024/05/29/tong-hop-cac-loai-visa-tai-dai-loan/
+match = -52.4%%
+title = Hộ chiếu Đài Loan 2024 quyền lực như thế nào?
+url = https://taiwandiary.vn/2024/06/27/ho-chieu-dai-loan-2024-dung-thu-69/
 
 [www.roc-taiwan.org]
 match = 23.8%%
