--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-04 21:47:06
+lastsearch = 2024-08-04 23:27:37
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,9 +62,9 @@ title = Rạp Galaxy Kinh Dương Vương - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/galaxy-kinh-duong-vuong/
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
 match = -212.5%%
