--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-04 17:37:01
+lastsearch = 2024-08-04 23:20:21
 
 [www.lazada.vn]
 match = -94.4%%
@@ -12,9 +12,9 @@ title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
-match = -100.0%%
-title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
-url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
+match = -161.1%%
+title = Người Việt Bolsa/Orange County | 💥💥💥 Nem chua lá ổi Bình Định
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2885626441587720/
 
 [www.instagram.com]
 match = -50.0%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = -122.2%%
+title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
+url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -82,14 +82,14 @@ title = NEM NƯỚNG | Fast Food
 url = https://www.ministop.vn/en/product/detail?id=934
 
 [www.youtube.com]
-match = -111.1%%
-title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
-url = https://www.youtube.com/watch?v=guu4UvG6cKY
+match = -161.1%%
+title = [ENG SUB] Chỉ Cần 5 Phút Trộn Bột Chiên Kiểu Mới – Pha ...
+url = https://www.youtube.com/watch?v=hpP43TbWhHw
 
 [www.tiktok.com]
-match = -188.9%%
-title = let me cater to you with these easy nem nuong spring rolls ...
-url = https://www.tiktok.com/@marylantran/video/7303621361979755822?lang=en
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [vi.wikipedia.org]
 match = -27.8%%
