--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-04 13:43:51
+lastsearch = 2024-08-04 23:27:58
 
 [erado.vn]
-match = 5.0%%
-title = Giường da hạng sang mã AT14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-at14.html
+match = 0.0%%
+title = Giường ngủ da hạng sang mã 14
+url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
 
 [shopee.vn]
 match = -105.0%%
@@ -134,7 +134,7 @@ url = https://inoacliving.vn/blog/kich-thuoc-nem-tieu-chuan/
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 14 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html?srsltid=AfmBOoo5m-LvpC-yHEJEoe156CNKVUEus-uEHPlBJz9Fvshn1DSrXDzY
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html
 
 [sofaphongkhach.vn]
 match = -40.0%%
