--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-08-04 17:28:04
+lastsearch = 2024-08-04 23:21:21
 
 [www.everonqb.com]
-match = 0.0%%
-title = Everon Quảng Bình Vỏ gối ôm EPC19055 80x100
-url = https://www.everonqb.com/vo-goi-om-epc19055-80x100.html
+match = -8.7%%
+title = Everon Quảng Bình Vỏ gối ôm EPCOCEAN 80x100
+url = https://www.everonqb.com/vo-goi-om-epcocean-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
