--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-05 01:26:00
+lastsearch = 2024-08-05 02:38:58
 
 [everon.online]
-match = 50.0%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
+match = -44.4%%
+title = Bộ Everon EPM24061
+url = https://everon.online/products/bo-everon-epm24061
 
 [www.everonvn.vn]
 match = -32.4%%
@@ -29,7 +29,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [vuanem.com]
 match = 5.9%%
 title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan?srsltid=AfmBOorpKj9BTwRdAoBYkT1-xVzJGXFOpt2zACjVkXTcZn2S2W6a9bAT
+url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
 
 [everonvn.com.vn]
 match = 23.5%%
@@ -64,7 +64,7 @@ url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton
 [jysk.vn]
 match = -26.5%%
 title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp | JYSK
-url = https://jysk.vn/ga-chun-140x200cm?srsltid=AfmBOopqrFBLq1L45NVJxxGsvFZRjQdV4daYFCEhS9b8MZj1tPOSpcLC
+url = https://jysk.vn/ga-chun-140x200cm
 
 [anpha.vuanem.com]
 match = 0.0%%
