--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-05 00:22:59
+lastsearch = 2024-08-05 02:39:17
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7183440/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWKQYn4i&sig=ACfU3U3_-xNEpDpJzGNQE4FIH-3Ubo3iFw&hl=en&sa=X&ved=2ahUKEwiWlpX_7NuHAxWgGlkFHW4hM0sQ6AF6BAgaEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWLHWp2g&sig=ACfU3U1J954Z7QFZy-_1PNDDdTLjosS3zg&hl=en&sa=X&ved=2ahUKEwj089S6i9yHAxXAF1kFHYB0CmAQ6AF6BAgYEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
