--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-01 18:48:15
 
 [search]
-lastsearch = 2024-08-04 22:32:25
+lastsearch = 2024-08-05 02:29:51
 
 [shopee.vn]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Chiếu trúc thanh Hương Trúc 100 x 190cm
 url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-100-190.html
 
 [www.facebook.com]
-match = 31.6%%
-title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+match = -75.0%%
+title = Đệm 24h Thái Bình - Chăn Ga Gối Đệm's post
+url = https://www.facebook.com/story.php/?story_fbid=716670557148181&id=100064157288007
 
 [muasamcong.mpi.gov.vn:8082]
 match = -25.0%%
