--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-04 23:35:23
+lastsearch = 2024-08-05 02:28:51
 
 [batdongsan.com.vn]
-match = -193.3%%
-title = Chung cư D2 Giảng Võ - Mua Bán Căn Hộ Chung Cư T8/ ...
-url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
+match = -240.0%%
+title = Bán đất tại Đường Lý Chiêu Hoàng, Phường An Lạc, Quận Bình ...
+url = https://batdongsan.com.vn/ban-dat-duong-ly-chieu-hoang-phuong-an-lac-6/gia-tu-5-ty-den-7-ty-dt-tu-150m2-den-200m2
 
 [vinatools.com]
 match = -200.0%%
@@ -455,4 +455,14 @@ url = https://www.circlek.com.vn/vi/he-thong-circle-k/
 match = -126.7%%
 title = Tháng Tám - 2024 | Tổng Giáo Phận Hà ...
 url = https://www.tonggiaophanhanoi.org/thang-tam-2024/
+
+[sadico.com.vn]
+match = -33.3%%
+title = THÔNG BÁO THAY ĐỔI NHÂN SỰ
+url = https://sadico.com.vn/wp-content/uploads/2024/07/THONG-BAO-THAY-DOI-NHAN-SU-THANH-VIEN-HDQT-VA-THANH-VIEN-BAN-KIEM-SOAT-HET-NHIEM-KY.pdf
+
+[hcmc.vietnam.embassy.gov.au]
+match = -200.0%%
+title = Contact List - Hospitals - Ho Chi Minh City, Vietnam
+url = https://hcmc.vietnam.embassy.gov.au/files/hchi/list-of-hospitals-feb-2024.pdf
 
