--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-05 00:48:43
+lastsearch = 2024-08-05 02:41:20
 
 [shopee.vn]
-match = -109.5%%
-title = Giường Gỗ GOLDCAT Cho Trẻ Từ 2-15 Tuổi Phong Cách ...
-url = https://shopee.vn/Giường-Gỗ-GOLDCAT-Cho-Trẻ-Từ-2-15-Tuổi-Phong-Cách-Hàn-Quốc-Trọng-Tải-Tối-Đa-180kg-Gỗ-Quế-An-Toàn-i.37391376.20738001993
+match = -90.5%%
+title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm trải giường
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -37,9 +37,9 @@ title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
-match = -119.0%%
-title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
-url = https://comehome.com.vn/blog/post/giuong-ngu-doi
+match = -90.5%%
+title = Kích thước giường ngủ tiêu chuẩn, thông dụng nhất 2024
+url = https://comehome.com.vn/blog/post/kich-thuoc-giuong-ngu
 
 [www.kymdan.com]
 match = 14.3%%
