--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-04 22:27:55
+lastsearch = 2024-08-05 04:01:08
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Gỗ Xịn Thái Lan 1,5mx1,9m-1,6mx2m-1, ...
 url = https://shopee.vn/Chiếu-Trúc-Gỗ-Xịn-Thái-Lan-1-5mx1-9m-1-6mx2m-1-8mx2m-Hàng-Cao-Cấp-i.158114102.5332512087
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = 14.3%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -85.7%%
@@ -42,9 +42,9 @@ title = Bảo hộ Chỉ dẫn địa lý “Cao Bằng” cho sản phẩm trú
 url = https://ipvietnam.gov.vn/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-2/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
 
 [chieutrelanlan.com]
-match = 9.5%%
-title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [thegioidemviet.vn]
 match = -23.8%%
