--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-05 01:44:04
+lastsearch = 2024-08-05 03:49:13
 
 [www.diepxuan.com]
-match = -25.0%%
-title = Nệm caosu Liên Á L'ADOME 200x220x20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-caosu-lien-a-ladome-200x220x20.html
+match = 3.6%%
+title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [www.qcyc.ca]
 match = -53.6%%
