--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-08-05 01:18:09
+lastsearch = 2024-08-05 03:48:31
 
 [thefelix.vn]
-match = -2.6%%
-title = Nệm cao su Felix Comfort - Độ cứng tiêu chuẩn (Cấp độ 1)
-url = https://thefelix.vn/products/nem-cao-su-felix-premium-comfort-10cm
+match = -50.0%%
+title = Nệm Cao Su Felix
+url = https://thefelix.vn/collections/nem-cao-su-felix
 
 [nemkhanganh.com]
 match = 47.4%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = 13.3%%
-title = Felix - Nệm cao su thiên nhiên
-url = https://www.facebook.com/photo.php?fbid=722111676746654&id=100068434838834&set=a.413784520912706
+match = 31.6%%
+title = Felix - Nệm cao su thiên nhiên | Ho Chi Minh City
+url = https://www.facebook.com/thefelix.vn/
 
 [shopee.vn]
 match = 36.8%%
@@ -67,9 +67,9 @@ title = [GIÁ ĐỆM 2024] Nệm cao su thiên nhiên ...
 url = https://ninhouse.vn/collections/nem-cao-su-thien-nhien
 
 [www.lazada.vn]
-match = 5.3%%
-title = Nệm cao su thiên nhiên Felix Comfort - Độ cứng tiêu chuẩn ...
-url = https://www.lazada.vn/products/nem-cao-su-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-15cm-i2294959349-s11133506275.html
+match = 13.2%%
+title = Nệm cao su 100%% thiên nhiên - Felix Comfort - độ cứng ...
+url = https://www.lazada.vn/products/nem-cao-su-100-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-nang-do-co-the-thoang-khi-toi-uu-i2295048242.html
 
 [nemcaosuthangloi.vn]
 match = 18.2%%
