--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-05 01:43:18
+lastsearch = 2024-08-05 03:56:00
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -122.2%%
-title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
-url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -82,14 +82,14 @@ title = NEM NƯỚNG | Fast Food
 url = https://www.ministop.vn/en/product/detail?id=934
 
 [www.youtube.com]
-match = -161.1%%
-title = [ENG SUB] Chỉ Cần 5 Phút Trộn Bột Chiên Kiểu Mới – Pha ...
-url = https://www.youtube.com/watch?v=hpP43TbWhHw
+match = -111.1%%
+title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
+url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -188.9%%
+title = let me cater to you with these easy nem nuong spring rolls ...
+url = https://www.tiktok.com/@marylantran/video/7303621361979755822?lang=en
 
 [vi.wikipedia.org]
 match = -27.8%%
