--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -92,9 +92,9 @@ title = Gối Vuông Tựa | Khonemtonghop.com
 url = https://khonemtonghop.com/goi-vuong-tua/
 
 [thocamtraby.com]
-match = -53.3%%
-title = set 3 vỏ gối vuông cổ điển chất nhung
-url = https://thocamtraby.com/product/details/set-3-vo-goi-vuong-co-dien-chat-nhung-VOGOI010
+match = -33.3%%
+title = set 3 vỏ gối vuông trơn màu cao cấp
+url = https://thocamtraby.com/product/details/set-3-vo-goi-vuong-tron-mau-cao-cap-VOGOI011
 
 [cobanmart.com]
 match = -106.7%%
