--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-05 02:27:23
+lastsearch = 2024-08-05 05:14:28
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC22 057
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
+title = Bộ sản phẩm SH_BC22 066
+url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [everon.online]
 match = 50.0%%
@@ -67,8 +67,8 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = 17.6%%
-title = Dòng chăn ga gối cotton Basic mã BC-04
+match = 2.9%%
+title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
 url = https://songhong.info/chan-ga-goi-bc-04
 
 [kona.com.vn]
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022?srsltid=AfmBOooFsv0kayQH0UNrnPSY_xGs4fnAdq_5jDh4dDwfrrCJnrXcSY8n
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
@@ -112,9 +112,9 @@ title = Ga gối Sông Hồng basic TC BC24107
 url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-bc24107.html
 
 [everonvn.com.vn]
-match = -23.5%%
-title = Bảng giá bộ chăn ga gối Everon Ep1523 Hàn Quốc màu hoa ...
-url = https://everonvn.com.vn/everon/273/everon-ep-1523?srsltid=AfmBOopMOjcImCpYWWt6hsuvyNHzohYWixJVeTvqLFjNDOTs2rpfD0hT
+match = -4.2%%
+title = Bộ Everon Ep1822 - Sheep
+url = https://everonvn.com.vn/everon/623/bo-everon-ep1822
 
 [staging.happynest.com.vn]
 match = -8.8%%
