--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-05 03:50:16
+lastsearch = 2024-08-05 05:21:17
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -22,14 +22,14 @@ title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
 url = https://shopee.vn/list/chăn ga gối
 
 [foreverbedding.net]
-match = -32.1%%
-title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+match = -7.1%%
+title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = 0.0%%
-title = Mẫu chăn ga gối cao cấp dòng Urban mã UC-05
-url = https://changagoidemsonghong.com/chan-ga-goi-uc05
+match = -28.6%%
+title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
+url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
 
 [flexhouse.vn]
 match = -17.9%%
