--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-05 01:56:13
+lastsearch = 2024-08-05 05:17:11
 
 [eva.vn]
 match = -163.2%%
@@ -182,8 +182,8 @@ title = Về Mộc Hóa ngắm bông súng, xem đan chiếu bàng
 url = https://www.phunuonline.com.vn/ve-moc-hoa-ngam-bong-sung-xem-dan-chieu-bang-a1454161.html
 
 [hoamoclan.org]
-match = -147.4%%
-title = Cây giống hoa mộc lan – Hướng dẫn cách trồng, chăm sóc ...
+match = -57.9%%
+title = Hướng dẫn cách trồng, chăm sóc hoa mộc lan
 url = https://hoamoclan.org/
 
 [www.webtretho.com]
