--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-08-05 02:39:59
+lastsearch = 2024-08-05 05:13:26
 
 [www.diepxuan.com]
-match = 100.0%%
-title = Nệm Foam Dreamland Úc 160x200x20
-url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
+match = 37.5%%
+title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [changagoidemdep.vn]
 match = -12.5%%
