--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-05 03:18:28
+lastsearch = 2024-08-05 05:16:13
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -32,9 +32,9 @@ title = (FREESHIP) Thảm chân giường, thảm bếp dài ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [decoviet.vn]
-match = 23.8%%
-title = Thảm Sofa Phòng Khách
-url = https://decoviet.vn/tham-phong-khach/
+match = -36.4%%
+title = Showroom Thảm Sofa Giá Rẻ Tại Bình Dương
+url = https://decoviet.vn/tham-sofa-binh-duong/
 
 [shopee.vn]
 match = -50.0%%
@@ -82,8 +82,8 @@ title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
 url = https://www.airbnb.com.vn/rooms/1258488
 
 [comehome.com.vn]
-match = -109.1%%
-title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ cho bé ...
+match = -77.3%%
+title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
